--- a/Categorize/Categorize.css
+++ b/Categorize/Categorize.css
@@ -1,8 +1,9 @@
 #categoryselectmaster2 {
-	/*border: 1px solid #c21731;*/
-	border: 1px solid #1C537A;
-	/*background-color: #e9e9e9;*/
-	background-color: #e9e9e9;
+	border: 1px solid #C0C0C0;
+	background-color: #FFFFFF;
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFF), color-stop(1, #E8F2F8));
+	background-image: -moz-linear-gradient(top, #FFF, #E8F2F8);
+	filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=0, startColorstr=#FFF, endColorstr=#E8F2F8);
 	max-height: 550px;
 	padding: 5px;
 	margin: 0px 0px 15px 0px;
@@ -10,11 +11,17 @@
 
 span.xlabel {
 	background-color: #EDEFF4;
-    border: 1px solid #666;
-    cursor: pointer;
-    display: inline;
-    padding: 1px 2px;
+	border: 1px solid #666;
+	cursor: pointer;
+	display: inline;
+	padding: 1px 2px;
 	margin:0px 2px 0px 3px;
+}
+span.xmaster {
+	background-image: url("images/arrow-right.png");
+	background-position: right center;
+	background-repeat: no-repeat;
+	padding-right:15px;
 }
 span.xcategorize1{
 	background-color:#B6B6FB;
@@ -50,7 +57,7 @@ table#xtable{
 	background:none;
 }
 table#xtable th{
-	width:15%;
+	width:1%;
 }
 
 /* Categorize Mediawiki Extension
