--- a/Collection/js/bookcreator.css
+++ b/Collection/js/bookcreator.css
@@ -8,6 +8,66 @@
 	font-size: 10pt;
 }
 
+/*
+ * Special page
+ */
+
+.collection-column {
+	width: 47%;
+}
+
+.collection-column-left {
+	margin-right: 5%;
+}
+
+.collection-column-right-box {
+	margin-bottom: 10px;
+	padding: 10px;
+	border: 1px solid #aaa;
+	background-color: #f9f9f9;
+}
+
+/* Input follows user direction */
+#mw-collection-title-form input {
+	direction: ltr;
+}
+
+.collection-create-chapter-links {
+	text-align: center;
+	padding: 2px;
+	margin-top: 20px;
+	margin-bottom: 2px;
+	border: 1px solid #aaa;
+	background-color: #f9f9f9;
+}
+
+.collection-create-chapter-links a {
+	margin: 0 1em;
+}
+
+.collection-create-chapter-list {
+	padding: 10px 20px;
+	border: 1px solid rgb(170, 170, 170);
+}
+
+.collection-create-chapter-list-text {
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+.collection-create-chapter-list ul {
+	list-style: none;
+	margin-left: 0;
+}
+
+.collection-create-chapter-list .chapter {
+	margin-top:0.3em;
+}
+
+.collection-create-chapter-list  .article .title {
+	margin-left: 1em;
+}
+
 .collection-button {
 	float: left;
 	padding: 0 10px;
@@ -37,4 +97,43 @@
 
 .collection-button a:hover {
 	text-decoration: none;
+}
+
+/*
+ * Creator box
+ */
+
+.collection-creatorbox {
+	text-align: left;
+	margin: 10px 0;
+	padding: 5px 10px;
+	border: 1px solid #aaa;
+	background-color: #f9f9ff;
+}
+
+.collection-creatorbox-row {
+	margin-left: 90px;
+	margin-bottom: 0;
+}
+
+/* Trivial but nicer for the browsers that support it */
+.rtl .collection-creatorbox-book {
+	--ms-transform: scaleX(-1);
+	-moz-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+}
+
+.collection-creatorbox-title {
+	font-weight: bold;
+	font-size: 1.2em;
+}
+
+.collection-creatorbox-iconlink {
+	margin-left: 10px;
+}
+
+.collection-creatorbox-row img {
+	vertical-align: text-bottom;
 }
