adding links to campaign logs, tweaking log layout
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@91806 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/CentralNotice/centralnotice.css
+++ b/CentralNotice/centralnotice.css
@@ -57,6 +57,9 @@
 	margin-left:1.6em;
 	margin-right:1.6em;
 }
+#preferences table#cn-campaign-logs {
+	width: auto;
+}
 
 /* Vector-specific definitions */
 body.skin-vector #preferences fieldset.prefsection {
