--- a/WebFonts/css/webfonts.css
+++ b/WebFonts/css/webfonts.css
@@ -27,7 +27,7 @@ div#webfonts-fonts li{
 	margin: 0;
 	padding:5px;
 	font-size: 100%;
-	width: 100%;
+	float: none;
 }
 
 /* Variants and Actions */
