--- a/SocialProfile/UserStatus/UserStatus.css
+++ b/SocialProfile/UserStatus/UserStatus.css
@@ -1,4 +1,61 @@
-#status-history-time{
-        font-size: 9px;
-        color: #665;
+#status-history-time
+{
+	font-size: 9px;
+	color: #665;
+}
+
+#status-box
+{
+	width : 400px;
+	padding: 0px;
+	margin: 0px;
+}
+
+#status-box-top
+{
+	overflow:visible;
+	margin-left: 34px;
+	width: 30px;
+	height:24px;
+	background-color:orange;	
+	background-image: url('../images/status-corner.png');
+}
+
+#status-box-content
+{
+	background-color:orange;
+	padding:10px;
+	border-radius: 22px;
+	/*height: 38px;*/
+}
+
+#user-status-block 
+{
+	text-align: center;
+	color: white;
+}
+
+#us-link
+{
+	color: white;
+	font-size: 8pt;
+	text-decoration: underline
+}
+
+#user-status-history
+{
+	background-color: orange;
+}
+
+#status-letter-count
+{
+	float:right;
+	margin-right: 20px;
+	font-size: 8pt;
+}
+
+#status-bar
+{
+	margin-left: 20px;
+	text-align: left;
 }
