output campaign log details
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92037 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/CentralNotice/centralnotice.css
+++ b/CentralNotice/centralnotice.css
@@ -60,6 +60,15 @@
 #preferences table#cn-campaign-logs {
 	width: auto;
 }
+#preferences table#cn-campaign-logs td.primary {
+	background-color: #F0F0F0;
+}
+#preferences .cn-new-value {
+	color: #006400;
+}
+#preferences .cn-old-value {
+	color: #8B0000;
+}
 
 /* Vector-specific definitions */
 body.skin-vector #preferences fieldset.prefsection {
