ArticleFeedback: Add disclaimer message per Howie
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92104 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.css
+++ b/ArticleFeedback/modules/ext.articleFeedback/ext.articleFeedback.css
@@ -5,3 +5,8 @@
 	padding: 2em;
 	padding-top: 1em;
 }
+
+.articleFeedback-survey-disclaimer {
+	font-weight: normal; /* Override bold */
+	font-style: italic;
+}
