--- a/SocialProfile/UserStatus/UserStatus.css
+++ b/SocialProfile/UserStatus/UserStatus.css
@@ -1,9 +1,3 @@
-#status-history-time
-{
-	font-size: 9px;
-	color: #665;
-}
-
 #status-box
 {
 	width : 400px;
@@ -39,12 +33,24 @@
 {
 	color: white;
 	font-size: 8pt;
-	text-decoration: underline
+	text-decoration: underline;
 }
 
 #user-status-history
 {
 	background-color: orange;
+	color: white;
+}
+
+#user-status-history a
+{
+	text-decoration: underline;
+	color: white;
+}
+
+#status-history-time
+{
+	font-size: 9px;
 }
 
 #status-letter-count
