--- a/CentralNotice/centralnotice.css
+++ b/CentralNotice/centralnotice.css
@@ -69,6 +69,9 @@
 #preferences .cn-old-value {
 	color: #8B0000;
 }
+#preferences .cn-log-label {
+	font-weight: bold;
+}
 
 /* Vector-specific definitions */
 body.skin-vector #preferences fieldset.prefsection {
