--- a/SocialProfile/UserStatus/UserStatus.css
+++ b/SocialProfile/UserStatus/UserStatus.css
@@ -1,12 +1,10 @@
-#status-box
-{
+#status-box {
 	width : 400px;
 	padding: 0px;
 	margin: 0px;
 }
 
-#status-box-top
-{
+#status-box-top {
 	overflow:visible;
 	margin-left: 34px;
 	width: 30px;
@@ -15,53 +13,45 @@
 	background-image: url('../images/status-corner.png');
 }
 
-#status-box-content
-{
+#status-box-content {
 	background-color:orange;
 	padding:10px;
 	border-radius: 22px;
 	/*height: 38px;*/
 }
 
-#user-status-block 
-{
+#user-status-block {
 	text-align: center;
 	color: white;
 }
 
-#us-link
-{
+#us-link {
 	color: white;
 	font-size: 8pt;
 	text-decoration: underline;
 }
 
-#user-status-history
-{
+#user-status-history {
 	background-color: orange;
 	color: white;
 }
 
-#user-status-history a
-{
+#user-status-history a {
 	text-decoration: underline;
 	color: white;
 }
 
-#status-history-time
-{
+#status-history-time {
 	font-size: 9px;
 }
 
-#status-letter-count
-{
+#status-letter-count {
 	float:right;
 	margin-right: 20px;
 	font-size: 8pt;
 }
 
-#status-bar
-{
+#status-bar {
 	margin-left: 20px;
 	text-align: left;
 }
