SocialProfile: new special page, Special:RemoveMasterSystemGift, to allow awards to be permanently deleted (by users who have the 'awardsmanage' permission). It's mostly copied from UserGifts/SpecialRemoveMasterGift.php, with s/g-/ga-/
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92526 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SocialProfile/SystemGifts/SystemGift.css
+++ b/SocialProfile/SystemGifts/SystemGift.css
@@ -193,3 +193,21 @@
 	font-weight: bold;
 	text-decoration: none;
 }
+
+/* Special:RemoveMasterSystemGift */
+.ga-container {
+	margin: 15px 0px 0px 0px;
+}
+
+.ga-container img {
+	border: 1px solid #dcdcdc;
+	background-color: #fff;
+	padding: 3px;
+	display: block;
+	float: left;
+	margin: 0px 10px 0px 0px;
+}
+
+.ga-buttons {
+	padding: 15px 0px 0px 0px;
+}
