* Use interwiki cache (per r92528) * Use ResourceLoader for css * Some code clean-up/improvements This version is only compatible with 1.19 (r92528)
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92529 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/Interwiki/Interwiki.css
+++ b/Interwiki/Interwiki.css
@@ -10,11 +10,11 @@ table.mw-interwikitable.intro th {
 	vertical-align: top;
 }
 
-table.mw-interwikitable.intro th.mw-align-left {
+table.mw-interwikitable.intro th.mw-align-start {
 	text-align: left;
 }
 
-table.mw-interwikitable.intro th.mw-align-right {
+table.mw-interwikitable.intro th.mw-align-end {
 	text-align: right;
 }
 
@@ -23,10 +23,13 @@ table.mw-interwikitable.body td.mw-interwikitable-trans,
 table.mw-interwikitable.body td.mw-interwikitable-modify {
 	text-align: center;
 }
-.mw-interwikitable-url {
+/* @noflip */ .mw-interwikitable-url {
 	text-align: left;
 }
-input#mw-interwiki-url  {
+/* @noflip */ input#mw-interwiki-url  {
 	text-align: left;
 	direction: ltr;
+}
+.mw-interwikitable-modify {
+	white-space: nowrap;
 }
