MoodBar front-end dev: * ext.moodBar.core: - Implementing the type states (normal, hover, hovered, select, selected)
* ext.moodBar.init:
- whitespace

* jquery.moodBar:
 - Switch to $.ajax and pass callback property directly (it checks isFunction internally)
 - provide default values for 'page' and 'editmode' and allow them to be overidden (ie. not using globals)
 - $j -> $
 - Returning jqXHR instead of undefined. May not be needed, but having it available is nice and a 1 line change.

git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92722 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
+++ b/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
@@ -15,6 +15,7 @@
 
 .mw-moodBar-overlayTitle {
 	font-weight: bold;
+	white-space: nowrap;
 }
 
 .mw-moodBar-overlayClose {
@@ -22,16 +23,76 @@
 	font-size: 10px;
 }
 
+.mw-moodBar-types {
+	overflow: hidden; /* clear */
+	margin: 0 30px;
+}
+
 .mw-moodBar-type {
 	float: left;
-	width: 100px;
-	margin: 10px;
-	padding: 100px 10px 5px 10px;
-	background: #f0f0f0;
+	min-width: 42px;
+	margin: 15px;
+	padding: 42px 0 5px 0;
+	background: transparent url(images/type-unknown.png) center top no-repeat;
 	text-align: center;
 }
 
 .mw-moodBar-typeTitle,
 .mw-moodBar-overlayWhat {
-	font-size: 10px;
+	font-size: 12px;
+}
+
+/**
+ * Types
+ */
+
+/* Happy */
+.mw-moodBar-types .mw-moodBar-type-happy {
+	background-image: url(images/type-happy-normal.png);
+}
+.mw-moodBar-types:hover .mw-moodBar-type-happy {
+	background-image: url(images/type-happy-hover.png);
+}
+.mw-moodBar-types:hover .mw-moodBar-type-happy:hover {
+	background-image: url(images/type-happy-hovered.png);
+}
+.mw-moodBar-types-select .mw-moodBar-type-happy {
+	background-image: url(images/type-happy-select.png);
+}
+.mw-moodBar-types-select .mw-moodBar-type-happy.mw-moodBar-selected {
+	background-image: url(images/type-happy-selected.png);
+}
+
+/* Sad */
+.mw-moodBar-types .mw-moodBar-type-sad {
+	background-image: url(images/type-sad-normal.png);
+}
+.mw-moodBar-types:hover .mw-moodBar-type-sad {
+	background-image: url(images/type-sad-hover.png);
+}
+.mw-moodBar-types:hover .mw-moodBar-type-sad:hover {
+	background-image: url(images/type-sad-hovered.png);
+}
+.mw-moodBar-types-select .mw-moodBar-type-sad {
+	background-image: url(images/type-sad-select.png);
+}
+.mw-moodBar-types-select .mw-moodBar-type-sad.mw-moodBar-selected {
+	background-image: url(images/type-sad-selected.png);
+}
+
+/* Confused */
+.mw-moodBar-types .mw-moodBar-type-confused {
+	background-image: url(images/type-confused-normal.png);
+}
+.mw-moodBar-types:hover .mw-moodBar-type-confused {
+	background-image: url(images/type-confused-hover.png);
+}
+.mw-moodBar-types:hover .mw-moodBar-type-confused:hover {
+	background-image: url(images/type-confused-hovered.png);
+}
+.mw-moodBar-types-select .mw-moodBar-type-confused {
+	background-image: url(images/type-confused-select.png);
+}
+.mw-moodBar-types-select .mw-moodBar-type-confused.mw-moodBar-selected {
+	background-image: url(images/type-confused-selected.png);
 }
