MoodBar front-end dev: * ext.moodBar.core: - form and what trigger implemented
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92781 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
+++ b/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
@@ -42,8 +42,28 @@
 	font-size: 12px;
 }
 
+.mw-moodBar-form,
 .mw-moodBar-overlayWhatContent {
 	display: none;
+	overflow: hidden;
+}
+
+.mw-moodBar-formNote {
+	float: right;
+	font-size: 10px;
+	color: #7e7e7e;
+}
+
+.mw-moodBar-formTitle {
+	font-size: 18px;
+}
+
+.mw-moodBar-formInput {
+	width: 100%;
+}
+
+.mw-moodBar-formSubmit {
+	float: right;
 }
 
 /**
