MoodBar front-end dev: * ext.moodBar.core: - form submission and error handling - wrapping moodbar overlay in a wrapper so we can use margin instead of padding, and thus make width:100% work for elements inside (the input field to be exact), otherwise the input element would be 100%+padding - swap expanded and collapsed icon trigger messages (triangles were mixed up)
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92787 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
+++ b/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
@@ -1,5 +1,5 @@
 /* Overlay styling */
-#mw-moodBar-overlay {
+#mw-moodBar-overlayWrap {
 	position: absolute;
 	top: 4em;
 	left: 10.2em;
@@ -8,9 +8,12 @@
 	background: #fafafa;
 	border: 1px solid #0645ad;
 	border-radius: 40px;
-	padding: 22px 22px;
 	box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
 	display: none;
+}
+
+#mw-moodBar-overlay {
+	margin: 22px 22px;
 }
 
 .mw-moodBar-overlayTitle {
@@ -60,6 +63,7 @@
 
 .mw-moodBar-formInput {
 	width: 100%;
+	outline: none;
 }
 
 .mw-moodBar-formSubmit {
