MoodBar front-end dev: * ext.moodBar.core: - form submission and error handling - wrapping moodbar overlay in a wrapper so we can use margin instead of padding, and thus make width:100% work for elements inside (the input field to be exact), otherwise the input element would be 100%+padding - swap expanded and collapsed icon trigger messages (triangles were mixed up)
Also:
- pointer on mood type hover
- disable function, versioned

git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92812 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
+++ b/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
@@ -40,6 +40,10 @@
 	text-align: center;
 }
 
+.mw-moodBar-type {
+	cursor: pointer;
+}
+
 .mw-moodBar-typeTitle,
 .mw-moodBar-privacy,
 .mw-moodBar-overlayWhat {
@@ -65,6 +69,11 @@
 .mw-moodBar-formInput {
 	width: 100%;
 	outline: none;
+}
+
+.mw-moodBar-privacy,
+.mw-moodBar-overlayWhatContent {
+	font-size: 10px;
 }
 
 .mw-moodBar-formSubmit {
