MoodBar: Fix up loading/error/success screens
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92818 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
+++ b/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
@@ -141,3 +141,11 @@
 .mw-moodBar-formInputs {
 	padding-left: 2em;
 }
+
+.mw-moodBar-loading {
+	background-image: url(images/ajax-spinner.gif);
+	background-position: left center;
+	background-repeat: no-repeat;
+	padding-left: 70px;
+	height: 70px;
+}
