log removing of banners, select correct radio button on load, formatting tweak
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92827 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/CentralNotice/centralnotice.css
+++ b/CentralNotice/centralnotice.css
@@ -72,6 +72,9 @@
 #preferences .cn-log-label {
 	font-weight: bold;
 }
+#preferences #cn-log-switcher label {
+	margin-right: 1em;
+}
 
 /* Vector-specific definitions */
 body.skin-vector #preferences fieldset.prefsection {
