Some CSS to fix the fact that the disclosure indicator gets underlined when you hover over the link
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92835 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
+++ b/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
@@ -50,6 +50,18 @@
 	font-size: 12px;
 }
 
+.mw-moodBar-overlayWhat > a:hover {
+	text-decoration: none !important;
+}
+
+a:hover .mw-moodBar-overlayWhatLabel {
+	text-decoration: underline;
+}
+
+.mw-moodBar-overlayWhatTrigger {
+	text-decoration: none;
+}
+
 .mw-moodBar-form,
 .mw-moodBar-overlayWhatContent {
 	display: none;
