--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -14,6 +14,16 @@
  display: block;
  width: 22px;
  height: 2.5em;
+ 	
+	/* This hides the text but shows the background image */
+	padding-top: 3.1em;
+	margin-top: 0;
+	/* Only applied in IE6 */
+	margin-top: -0.8em !ie;
+	height: 0;
+	overflow: hidden;
+	/* @embed */
+	background-image: url(images/fav-icons.png);
  
 }
 #ca-favorite.icon a {
