Added SpecialUserStatus.php where u (soon only admin) can delete messages. Made some changes for the "i like" system(not implemented yet). Fixed some things
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@93541 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SocialProfile/UserStatus/UserStatus.css
+++ b/SocialProfile/UserStatus/UserStatus.css
@@ -1,5 +1,5 @@
 #status-box {
-	width : 400px;
+	width : 440px;
 	padding: 0px;
 	margin: 0px;
 }
@@ -34,6 +34,7 @@
 #user-status-history {
 	background-color: orange;
 	color: white;
+	text-align: left;
 }
 
 #user-status-history a {
@@ -54,4 +55,8 @@
 #status-bar {
 	margin-left: 20px;
 	text-align: left;
+}
+
+#like-status a {
+	text-decoration: none;
 }
