1) Replace remaining instance of word 'mood' in the UI 2) Show feedback box when MoodBar is opened 3) Disable button when MoodBar is opened (is activated once mood is selected) 4) Focus feedback box once mood is selected.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@93580 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
+++ b/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
@@ -51,9 +51,13 @@
 	font-size: 12px;
 }
 
-.mw-moodBar-form,
+
 .mw-moodBar-overlayWhatContent {
 	display: none;
+	overflow: hidden;
+}
+
+.mw-moodBar-form {
 	overflow: hidden;
 }
 
