--- a/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
+++ b/MoodBar/modules/ext.moodBar/ext.moodBar.core.css
@@ -1,12 +1,14 @@
 /* Overlay styling */
 #mw-moodBar-overlayWrap {
 	position: absolute;
-	top: 4em;
+	top: 3.5em;
 	left: 10.2em;
 	min-width: 100px;
 	min-height: 100px;
 	background: #fafafa;
 	border: 1px solid #0645ad;
+	-moz-border-radius: 40px;
+	-webkit-border-radius: 40px;
 	border-radius: 40px;
 	box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
 	display: none;
@@ -14,6 +16,16 @@
 
 #mw-moodBar-overlay {
 	margin: 22px 22px;
+	position: relative;
+}
+
+#mw-moodBar-pokey {
+	position: absolute;
+	top: -59px;
+	left: 14px;
+	background: transparent url(images/pokey.png) center top no-repeat;
+	width: 49px;
+	height: 37px;
 }
 
 .mw-moodBar-overlayTitle {
