follow-up r93878 (also renamed a JS file added in r93878)
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@93962 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SemanticMediaWiki/skins/SMW_custom.css
+++ b/SemanticMediaWiki/skins/SMW_custom.css
@@ -130,6 +130,14 @@ span.smwwarning {
 	font-size: 90%;
 }
 
+/* ui buttons for QueryUI */
+span.smw-remove a{
+	background: url(images/close-button.png) center no-repeat;
+	height: 16px;
+	width: 16px;
+	text-decoration: none;
+}
+
 /* search, browse, RDF icons */
 
 span.smwsearchicon { /*FIXME: this was only used for Factbox docu, should be removed from code*/
