follow-up:r93878 (stable)
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@94055 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SemanticMediaWiki/skins/SMW_custom.css
+++ b/SemanticMediaWiki/skins/SMW_custom.css
@@ -133,11 +133,17 @@ span.smwwarning {
 /* ui buttons for QueryUI */
 .smw-sort input, .smw-sort a, .smw-sort select, .smw-sort checkbox{
 	margin-left: 5px;
+	margin-bottom: 5px;
 }
 span.smw-remove a img{
 	text-decoration: none;
 	margin-right: 5px;
 	vertical-align: -3px;
+}
+
+.smw-prop-dialog input, .smw-prop-dialog select{
+	margin-top: 10px;
+	margin-right: 5px;
 }
 
 
