SocialProfile: lots of miscellaneous cleanup to UserStatus, but the main big changes here are: *more documentation *changed us-link from an ID to a class because IDs must be unique *shut up a PHP warning about ush_likes *do escaping properly via all the appropriate MW functions and do escaping as close to the output as possible to avoid reviewer anxiety *simple checking in wfSaveStatus to make sure that the user is who they claim to be; would probably be best to use edit token stuff here *moved a lot of HTML building from JS to PHP *decoupled UserStatus and UserProfile by removing UserProfilePage::getStatus() and moving the logic to UserStatus_AjaxFunctions.php, function wfUserProfileStatusOutput *used Language::timeanddate() instead of custom DateTime building for status message dates
I probably broke something, even though I tried to test this rather extensively.

git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@94139 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SocialProfile/UserStatus/UserStatus.css
+++ b/SocialProfile/UserStatus/UserStatus.css
@@ -1,31 +1,31 @@
 #status-box {
-	width : 440px;
+	width: 440px;
 	padding: 0px;
 	margin: 0px;
 }
 
 #status-box-top {
-	overflow:visible;
+	overflow: visible;
 	margin-left: 34px;
 	width: 30px;
-	height:24px;
-	background-color:orange;	
+	height: 24px;
+	background-color: orange;
 	background-image: url('../images/status-corner.png');
 }
 
 #status-box-content {
-	background-color:orange;
-	padding:10px;
+	background-color: orange;
+	padding: 10px;
 	border-radius: 22px;
 	/*height: 38px;*/
 }
 
-#user-status-block {
+#user-status-block, #status-edit-controls {
 	text-align: center;
 	color: white;
 }
 
-#us-link {
+.us-link {
 	color: white;
 	font-size: 8pt;
 	text-decoration: underline;
@@ -47,7 +47,7 @@
 }
 
 #status-letter-count {
-	float:right;
+	float: right;
 	margin-right: 20px;
 	font-size: 8pt;
 }
