--- a/Babel/Babel.css
+++ b/Babel/Babel.css
@@ -1,9 +1,8 @@
 /**
  * Stylesheet for Babel extension.
  *
- * This should be added to your MediaWiki:Common.css page when installing this
- * extension and should not be modified.  You may modify the CSS code on the
- * MediaWiki:Common.css page to adjust colours etc.
+ * You can override the CSS code on the MediaWiki:Common.css page
+ * on your wiki to adjust colours etc.
  *
  * @file
  * @ingroup Extensions
