moved the 'format as' select-box to below printouts
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@94492 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SemanticMediaWiki/skins/SMW_custom.css
+++ b/SemanticMediaWiki/skins/SMW_custom.css
@@ -160,6 +160,11 @@ div.smwqcnavbar{
 	padding-top: 5px;
 }
 
+div.smwqcformatas{
+	margin:10px;
+	margin-top: 15px;
+	margin-bottom: 0px;
+}
 /* search, browse, RDF icons */
 
 span.smwsearchicon { /*FIXME: this was only used for Factbox docu, should be removed from code*/
