aligned input boxes for all POs
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@94496 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SemanticMediaWiki/skins/SMW_custom.css
+++ b/SemanticMediaWiki/skins/SMW_custom.css
@@ -139,7 +139,13 @@ span.smwwarning {
 span.smw-remove a img{
 	text-decoration: none;
 	margin-right: 5px;
-	vertical-align: -3px;
+	vertical-align: -0.25em;
+	margin-left: -30px;
+
+}
+
+div.smwqcsortbox{
+	padding-left: 35px;
 }
 
 .smwpropdialog input, .smwpropdialog select{
@@ -164,6 +170,11 @@ div.smwqcformatas{
 	margin:10px;
 	margin-top: 15px;
 	margin-bottom: 0px;
+}
+
+.smwquisortlabel{
+	width: 12em;
+	float: left;
 }
 /* search, browse, RDF icons */
 
